# goldvault_investment_module

./: build.sh  main.py  pyproject.toml  render.yaml
app/api/v1/: __init__.py
app/api/v1/admin/: __init__.py
app/api/v1/admin/admin_auth/: __init__.py  auth.py
app/api/v1/admin/inventory/: __init__.py  inventory.py
app/api/v1/admin/investment/: __init__.py  investment.py
app/api/v1/admin/plans/: __init__.py  plans.py
app/api/v1/admin/subscriptions/: __init__.py  subscriptions.py
app/api/v1/admin/user_service/: __init__.py  user_service.py
app/api/v1/common/: __init__.py  test_common.py
app/api/v1/common/file_upload/: __init__.py  upload.py
app/core/: config.py  logging.py  security.py
app/db/mongo/: crud.py  mongodb.py
app/models/: admin.py  base.py  inventory.py  investment.py  user.py
app/schemas/: admin.py  investment.py  user.py
app/schemas/common/utils/s3/: upload.py
app/services/auth/: auth_service.py
app/services/common/utils/s3/: upload.py
app/services/inventory/: inventory.py
app/services/investment/: investment.py
app/services/plans/: plans.py
app/services/subscriptions/: subscriptions.py
app/services/user_service/: user_service.py
app/utils/: common.py
app/utils/email_service/: email.py
