[project]
name = "investment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.4.0",
    "aiosmtplib>=5.0.0",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "httpx>=0.28.1",
    "icecream>=2.1.8",
    "jwt>=1.4.0",
    "motor>=3.7.1",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
